<resources>
    <string name="app_name">WanAndroid</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_home">首页</string>
    <string name="title_knowledge">体系</string>
    <string name="title_mine">我的</string>
    <string name="hint_search">搜索</string>
    <string name="menu_open_browser">浏览器打开</string>
    <string name="menu_copy_link">复制链接</string>

    <string name="copy_success">已复制到剪贴板</string>
    <string name="hot_search">热搜</string>
    <string name="history_search">历史搜索</string>
    <string name="tab_project">项目</string>
    <string name="my_collection">收藏</string>
    <string name="label_setting">设置</string>
    <string name="tool_box">百宝箱</string>
    <string name="label_no_more">一一一一 我是有底线的 一一一一</string>
    <string name="load_more_error">加载失败</string>
    <string name="label_no_res">貌似服务器没有相应的资源呢</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="label_password">密码</string>
    <string name="btn_login">登 录</string>
    <string name="label_username">用户名</string>
    <string name="welcome_to_wanandroid">Welcome to WanAndroid</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="to_register">没有账户?去注册</string>
    <string name="label_forget_password">忘记密码?</string>
    <string name="new_user">新用户?</string>
    <string name="sing_up">注册</string>
    <string name="web_load_error">出错了,点击空白区域重新加载~~~</string>
    <string name="label_confirm_pass">确认密码</string>
    <string name="label_logout">退出登录</string>
    <string name="wanandroid">WanAndroid</string>
    <string name="label_theme_style">主题风格</string>
    <string name="label_login_register">登录/注册</string>
    <string name="change_password">修改密码</string>
    <string name="clear_cache">清除缓存</string>
    <string name="check_update">检查更新</string>
    <string name="about_wanandroid">关于WanAndroid</string>
    <string name="origin_password">原密码</string>
    <string name="new_password">新密码</string>
    <string name="confirm_password">确认密码</string>
    <string name="modify_password">修改密码</string>


</resources>
